chart & styles added

--- a/index.html
+++ b/index.html
@@ -7,21 +7,19 @@
     <title>Таблица данных</title>
     <link rel="stylesheet" href="styles.css">
     <script src="main.js" defer></script>
-</head>
+</head> 
 
 <body>
     <table>
         <thead>
             <tr>
-                <th>Показатель</th>
-                <th>Текущий день</th>
-                <th>Вчера</th>
-                <th>Изменение</th>
-                <th>Этот день недели</th>
+                <th class="heading">Показатель</th>
+                <th class="heading current">Текущий день</th>
+                <th class="heading">Вчера</th>
+                <th class="heading">Этот день недели</th>
             </tr>
         </thead>
         <tbody class="table-body">
-            <!-- Данные будут загружаться сюда -->
         </tbody>
     </table>
 
